--- a/tribute-page/style.css
+++ b/tribute-page/style.css
@@ -13,16 +13,24 @@ html{
 
 body{
 	margin: 0;
-	background-color: #000;
-	background: url(bkg-lowq.jpg) no-repeat top center fixed;
-	background-size: cover;
+	background: #000 ;
 	color: #222;
 	font-family: "Trebuchet MS", Helvetica, sans-serif;
 }
 
+.background-fix{
+	height: 100vh;
+	width: 100vw;
+	z-index: -1;
+	position: absolute;
+	position: fixed;
+	background: url(bkg-lowq.jpg) no-repeat top center ;
+	background-size: cover;
+}
+
 
 @media all and (min-width: 1280px), all and (min-height: 720px){
-	body{
+	.background-fix{
 		background-image: url(bkg-1920-1080.jpg);
 	}
 }
