--- a/bs/layoutest_files/mainstyle.css
+++ b/bs/layoutest_files/mainstyle.css
@@ -76,9 +76,10 @@ header a:hover, header a:focus, header a:active{
 	overflow: hidden;
 	width: 4em;
 	height: 4em;
-	background: url("images/global/logo-icon.svg") no-repeat center center;
+	background: url("../images/global/logo-icon.svg") no-repeat center center;
 	background-size: auto 3em;
 	transition: background-color 0.45s ease;
+	font-size: 75%;
 }
 
 .logo:hover, .logo:active, .logo:focus, .menu-icon:hover, 
@@ -88,9 +89,15 @@ header a:hover, header a:focus, header a:active{
 	cursor: pointer;
 }
 
+@media all and (min-width: 35em) and (min-height: 35em){
+	.logo{
+		font-size: 100%;
+	}
+}
+
 @media all and (min-width: 54em){
 	.logo{
-		background: url("images/global/logo.svg") no-repeat center center;
+		background: url("../images/global/logo.svg") no-repeat center center;
 		background-size: auto 2em;		
 		width: 11em;
 	}
@@ -104,7 +111,7 @@ header a:hover, header a:focus, header a:active{
 	height: 4em;
 	background-color: #1E2720;
 	border: none;
-	font-size: 100%;
+	font-size: 75%;
 	transition: background-color 0.45s ease;
 }
 
@@ -118,6 +125,12 @@ header a:hover, header a:focus, header a:active{
 	height: 0.25em;
 	margin: 0.4em 1em;
 	border-radius: 0.125em;
+}
+
+@media all and (min-width: 35em) and (min-height: 35em){
+	.menu-icon{
+		font-size: 100%;
+	}
 }
 
 @media all and (min-width: 54em){
@@ -142,10 +155,10 @@ header li{
 }
 
 header li a {
-	padding: 1.4em 1em;
+	padding: 0.8em 1em;
 	margin: 0;
 	display: inline-block;
-	height: 4em;
+	height: 3em;
 	transition: background-color 0.45s ease;
 }
 
@@ -154,12 +167,21 @@ header li a:hover, header li a:focus, header li a:active{
 	outline: 0;	
 }
 
+@media all and (min-width: 35em) and (min-height: 35em){
+	header li a {
+		padding: 1.4em 1em;
+		margin: 0;
+		display: inline-block;
+		height: 4em;
+		transition: background-color 0.45s ease;
+	}
+}
+
 @media all and (max-width: 54em){
 	.nav-hide-small{
 		display: none;
 	}
 }
-
 /* Site Content */
 
 .main{
