--- a/bs/layoutest_files/mainstyle.css
+++ b/bs/layoutest_files/mainstyle.css
@@ -48,13 +48,12 @@ a:focus{
 /* Header and Top Nav*/
 
 header {
-	/*font-size: 90.90909%; for font size 110% on html element*/
 	background-color: #1E2720;
 	color: #fff;
-	overflow: hidden;
 	position: fixed;
 	top: 0;
 	width: 100%;
+	z-index: 1;
 }
 
 header a{
@@ -68,7 +67,7 @@ header a:hover, header a:focus, header a:active{
 	outline: none;
 }
 
-.logo {
+#logo {
 	float: left;
 	display: inline-block;
 	text-indent: 100%;
@@ -82,28 +81,28 @@ header a:hover, header a:focus, header a:active{
 	font-size: 75%;
 }
 
-.logo:hover, .logo:active, .logo:focus, .menu-icon:hover, 
-.menu-icon:active, .menu-icon:focus{
+#logo:hover, #logo:active, #logo:focus, #menu-icon:hover, 
+#menu-icon:active, #menu-icon:focus{
 	background-color: #009688;
 	outline: 0;
 	cursor: pointer;
 }
 
 @media all and (min-width: 35em) and (min-height: 35em){
-	.logo{
+	#logo{
 		font-size: 100%;
 	}
 }
 
 @media all and (min-width: 54em){
-	.logo{
+	#logo{
 		background: url("images/global/logo.svg") no-repeat center center;
 		background-size: auto 2em;		
 		width: 11em;
 	}
 }
 
-.menu-icon{
+#menu-icon{
 	float: left;
 	display: inline-block;
 	padding: 0.825em 0;
@@ -115,7 +114,7 @@ header a:hover, header a:focus, header a:active{
 	transition: background-color 0.45s ease;
 }
 
-.menu-icon span{
+#menu-icon span{
 	text-indent: 100%;
 	white-space: nowrap;
 	overflow: hidden;
@@ -128,13 +127,13 @@ header a:hover, header a:focus, header a:active{
 }
 
 @media all and (min-width: 35em) and (min-height: 35em){
-	.menu-icon{
+	#menu-icon{
 		font-size: 100%;
 	}
 }
 
 @media all and (min-width: 54em){
-	.menu-icon{
+	#menu-icon{
 		display: none;
 	}
 }
@@ -159,6 +158,7 @@ header li a {
 	margin: 0;
 	display: inline-block;
 	height: 3em;
+	text-decoration: none;
 	transition: background-color 0.45s ease;
 }
 
@@ -182,36 +182,195 @@ header li a:hover, header li a:focus, header li a:active{
 		display: none;
 	}
 }
+
+/*small drop navs*/
+.show-sm-nav{
+	height: 15em;
+	transition: height 0.45s ease;
+}
+
+@media all and (min-width: 35em) and (min-height: 35em){
+	.show-sm-nav{
+		height: 20em;
+	}
+}
+
+header ul ul{
+	position: fixed;
+	background-color: #00796B;
+	height: 0;
+	overflow: hidden;
+	border-radius: 0 0 .5em .5em;
+}
+
+header ul ul li{
+	display: block;
+	min-width: 9em;
+}
+
+header ul ul li a{
+	width: 100%;
+}
+
+/*big drop down nav */
+#big-drop-nav{
+	border-right: 0.5em solid #00796B;
+	position: fixed;
+	width: 100%;
+	right: 0;
+	padding-top: 3em;
+	background-color: #00796B;
+	color: #B2DFDB;
+	height: 0;
+	overflow: hidden;
+	-ms-overflow-style: -ms-autohiding-scrollbar;
+	transition: height 0.45s ease;
+}
+
+@media all and (min-width: 35em) and (min-height: 35em){
+	#big-drop-nav{
+		padding-top: 4em;
+	}
+}
+
+#big-drop-nav a {
+	color: #fff;
+	font-family: Tahoma, Geneva, sans-serif;
+	text-decoration: none;
+}
+
+#big-drop-nav a:hover, #big-drop-nav a:active, #big-drop-nav a:focus{
+	color: #fff;
+	outline: 0;
+	text-decoration: underline;
+} 
+
+#big-drop-nav a:focus{ background-color: #00796B; }
+
+#big-drop-nav section{
+	border-bottom: .1em dashed #009688;
+	margin: 0 1em;
+}
+
+#big-drop-nav .foot-follow{
+	display: none;
+}
+
+#big-drop-nav section:last-child{
+	border-bottom: none;
+}
+
+@media all and (min-width: 35em){
+	#big-drop-nav {
+		padding-left: 2rem;
+	}
+}
+
+@media all and (min-width: 54em){
+	#big-drop-nav section{
+		margin: 0;
+	}
+}
+
+#big-drop-nav ul{
+	list-style: none;
+	padding: 0;
+}
+
+
+@media all and (min-width: 35em){
+	#big-drop-nav section{
+		display: inline-block;
+		width: 50%;
+		float: left;
+		margin: 0;
+		border-bottom: none;
+	}	
+}
+
+@media all and (min-width: 45em){
+	#big-drop-nav section{
+		display: inline-block;
+		width: 33.33%;
+		float: left;
+		margin: 0;
+		border-bottom: none;
+	}	
+}
+
+#big-drop-nav::-webkit-scrollbar {
+    width: 0.3em;
+}
+ 
+#big-drop-nav::-webkit-scrollbar-track {
+	background-color: #009688;
+	margin: 4em auto 1em auto;
+	border-radius: 0.15em;
+}
+
+@media all and (min-width: 35em) and (min-height: 35em){
+	#big-drop-nav::-webkit-scrollbar-track{
+		margin-top: 5em;
+	}
+}
+ 
+#big-drop-nav::-webkit-scrollbar-thumb {
+    border-radius: 0.15em;
+    background-color: #1E2720; 
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5); 
+}
+
+.bg-nav-extend{ 
+	height: 100vh !important;
+	overflow-y: auto !important;
+}
+
+/*
+@media all and (min-width: 35em) and (min-height: 35em){
+	.bg-nav-extend{ 
+		height: 30.5em !important;
+	}
+}
+
+
+@media all and (min-width: 45em) and (min-height: 35em){
+	.bg-nav-extend{ 
+		height: 17.5em !important;
+	}
+}
+*/
+
+
 /* Site Content */
 
-.main{
+#main{
 	padding-top: 4em;
 	font-size: 90%;
 }
 
 @media all and (min-width: 35em){
-	.main { font-size: 100%; }
+	#main { font-size: 100%; }
 }
 
 @media all and (min-width: 45em){
-	.main p, .main ul, .main ol, .main dl { font-size: 105%; }
+	#main p, #main ul, #main ol, #main dl { font-size: 105%; }
 }
 
 @media all and (min-width: 54em){
-	.main{ font-size: 105%; }
+	#main{ font-size: 105%; }
 }
 
-.main > article{
+#main > article{
 	margin: 1rem;
 	max-width: 50rem;
 }
 
 @media all and (min-width: 35em){
-	.main > article { margin: 1rem 2rem 2rem 2rem; }
+	#main > article { margin: 1rem 2rem 2rem 2rem; }
 }
 
 @media all and (min-width: 54em){
-	.main article{
+	#main article{
 		margin-left: auto;
 		margin-right: auto;
 	}
@@ -322,7 +481,9 @@ footer ul{
 
 /* cholor schemes
 
-http://www.materialpalette.com/teal/blue
+http://www.materialpalette.com/teal/red
+
+accent: #FF5252;
 
 TEXT:
 #1E2720;
