--- a/bs/layoutest_files/mainstyle.css
+++ b/bs/layoutest_files/mainstyle.css
@@ -14,12 +14,6 @@ body{
 	color: #1E2720;
 }
 
-.no-scroll{
-	position: fixed;
-	top: 0;
-	bottom: 0;
-}
-
 .test{
 	color: red;
 }
@@ -55,11 +49,17 @@ a:focus{
 
 header {
 	background-color: #1E2720;
+	overflow: hidden;
 	color: #fff;
-	position: absolute;
 	top: 0;
 	width: 100%;
 	z-index: 1;
+}
+
+@media all and (min-width: 54em){
+	header{
+		position: fixed;
+	}
 }
 
 header a{
@@ -72,6 +72,8 @@ header a:hover, header a:focus, header a:active{
 	text-decoration: none;
 	outline: none;
 }
+
+
 
 #logo {
 	float: left;
@@ -159,6 +161,12 @@ header li{
 	display: inline-block;
 }
 
+@media all and (min-width: 54em){
+	header li{
+		margin-left: -5px;
+	}
+}
+
 header li a {
 	padding: 0.8em 1em;
 	margin: 0;
@@ -215,28 +223,19 @@ header ul ul li{
 }
 
 header ul ul li a{
+	margin-left: 5px;
 	width: 100%;
 }
 
 /*big drop down nav */
 #big-drop-nav{
-	border-right: 0.5em solid #00796B;
-	position: absolute;
 	width: 100%;
 	right: 0;
-	padding-top: 3em;
 	background-color: #00796B;
 	color: #B2DFDB;
 	height: 0;
 	overflow: hidden;
-	-ms-overflow-style: -ms-autohiding-scrollbar;
 	transition: height 0.45s ease;
-}
-
-@media all and (min-width: 35em) and (min-height: 35em){
-	#big-drop-nav{
-		padding-top: 4em;
-	}
 }
 
 #big-drop-nav a {
@@ -264,6 +263,10 @@ header ul ul li a{
 
 #big-drop-nav section:last-child{
 	border-bottom: none;
+}
+
+#big-drop-nav li{
+	margin-bottom: 1em;
 }
 
 @media all and (min-width: 35em){
@@ -304,31 +307,20 @@ header ul ul li a{
 	}	
 }
 
-#big-drop-nav::-webkit-scrollbar {
-    width: 0.3em;
-}
- 
-#big-drop-nav::-webkit-scrollbar-track {
-	background-color: #009688;
-	margin: 4em auto 1em auto;
-	border-radius: 0.15em;
-}
-
-@media all and (min-width: 35em) and (min-height: 35em){
-	#big-drop-nav::-webkit-scrollbar-track{
-		margin-top: 5em;
-	}
-}
- 
-#big-drop-nav::-webkit-scrollbar-thumb {
-    border-radius: 0.15em;
-    background-color: #1E2720; 
-    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5); 
-}
-
 .bg-nav-extend{ 
-	height: 100vh !important;
-	overflow-y: auto !important;
+	height: 52em !important;
+}
+
+@media all and (min-width: 35em){
+	.bg-nav-extend{ 
+		height: 35em !important;
+	}	
+}
+
+@media all and (min-width: 45em){
+	.bg-nav-extend{ 
+		height: 18em !important;
+	}	
 }
 
 /*
@@ -350,8 +342,7 @@ header ul ul li a{
 /* Site Content */
 
 #main{
-	padding-top: 4em;
-	font-size: 90%;
+	overflow: hidden;
 }
 
 @media all and (min-width: 35em){
@@ -363,7 +354,16 @@ header ul ul li a{
 }
 
 @media all and (min-width: 54em){
-	#main{ font-size: 105%; }
+	#main{ 
+		font-size: 105%; 
+		padding-top: 3rem;
+	}
+}
+
+@media all and (min-width: 54em) and (min-height: 35em){
+	#main{ 
+		padding-top: 4rem;
+	}
 }
 
 #main > article{
@@ -401,6 +401,16 @@ footer {
 	background-color: #00796B;
 	color: #B2DFDB;
 	overflow: hidden;
+}
+
+footer li{
+	margin-bottom: 0.75em;
+}
+
+@media all and (min-width: 54em){
+	footer li{
+		margin-bottom: 0.5em;
+	}
 }
 
 footer a {
