--- a/quote-machine/style.css
+++ b/quote-machine/style.css
@@ -36,6 +36,14 @@ header{
 	white-space: nowrap;
 }
 
+@media all and (min-width: 18em){
+	.button-text{
+		display: inline;
+		width: auto;
+		white-space: normal;
+	}
+}
+
 .button{
 	display: inline-block;
 	width: 50%;
