--- a/quote-machine/style.css
+++ b/quote-machine/style.css
@@ -10,6 +10,7 @@ html {
 
 body{
 	font-family: 'Roboto', sans-serif;
+	background-color: #e9e9e9;
 }
 
 #wrapper{
@@ -23,7 +24,9 @@ body{
 	justify-content: space-between;
 	align-items: center;
 }
-
+article{
+	overflow: auto;
+}
 header{
 	width: 100%;
 	text-align: center;
@@ -32,6 +35,7 @@ header{
 .button-text{
 	display: inline-block;
 	width: 0;
+	height: 0;
 	overflow: hidden;
 	white-space: nowrap;
 }
@@ -52,6 +56,16 @@ header{
 	text-decoration: none;
 }
 
+h1{
+	color: #fff;
+	background-color: #e62117;
+	margin-top: 0;
+	margin-bottom: 0;
+	font-weight: normal;
+	padding: 1rem;
+	font-size: 115%;
+}
+
 #new-quote{
 	background-color: #4CAF50;
 }
@@ -70,13 +84,19 @@ header{
 	background-color: #388E3C;
 }
 
-i{
-	margin-right: 0.5em;
+
+@media all and (min-width: 18em){
+	i{
+		margin-right: 0.5em;
+	}
 }
 
 p{
 	font-size: 115%;
-	margin: 0 1rem;
+	margin: 1em;
+	padding: 1em;
+	border-radius: 1rem;
+	background-color: #fff;
 }
 
 footer{
