--- a/quote-machine/style.css
+++ b/quote-machine/style.css
@@ -11,9 +11,10 @@ html {
 body{
 	font-family: 'Roboto', sans-serif;
 	background-color: #e9e9e9;
+	margin: 0;
 }
 
-#wrapper{
+/*#wrapper{
 	position: absolute;
 	top: 0;
 	bottom: 0;
@@ -23,10 +24,10 @@ body{
 	flex-direction: column;
 	justify-content: space-between;
 	align-items: center;
-}
+}*/
 
 header{
-	width: 100%;
+	width: 100vw;
 	text-align: center;
 }
 
