--- a/style.css
+++ b/style.css
@@ -22,21 +22,28 @@ body{
 	top: 0;
 	right: 0;
 	margin: 0.5rem;
-	padding: 0.5rem;
-	border-radius: 15%;
+	overflow: hidden;
+	padding: 2.25vw;
+	width: 15vw;
+	height: 15vw;
+	border-radius: 50%;
 	color: rgba(250, 250, 250, 0.9);
-	font-size: 5vw;
 	text-align: center;
 	line-height: 0;
-	border: 0.2rem solid rgba(250, 250, 250, 0.9);
+	border: 0.5vw solid rgba(250, 250, 250, 0.9);
 	background-color: rgba(0, 0, 0, 0.5);
 }
 
 #mobile-menu span{
-	display: inline-block;
-	height: 0;
-	width: 0;
+	text-indent: 100%;
+	white-space: nowrap;
 	overflow: hidden;
+	display: block;
+	background-color: #fff;
+	width: 6vw;
+	margin: 2vw auto;
+	height: 0.5vw;
+	border-radius: 0.125rem;
 }
 
 #paralax{
