--- a/style.css
+++ b/style.css
@@ -22,15 +22,13 @@ body{
 	top: 0;
 	right: 0;
 	margin: 0.5rem;
-	overflow: hidden;
 	padding: 2.25vw;
 	width: 15vw;
 	height: 15vw;
 	border-radius: 50%;
-	color: rgba(250, 250, 250, 0.9);
 	text-align: center;
 	line-height: 0;
-	border: 0.5vw solid rgba(250, 250, 250, 0.9);
+	border: 0.5vw solid rgba(255, 255, 255, 0.9);
 	background-color: rgba(0, 0, 0, 0.5);
 }
 
@@ -39,11 +37,11 @@ body{
 	white-space: nowrap;
 	overflow: hidden;
 	display: block;
-	background-color: #fff;
+	background-color: rgba(255, 255, 255, 0.9);
 	width: 6vw;
 	margin: 2vw auto;
 	height: 0.5vw;
-	border-radius: 0.125rem;
+	border-radius: 0.25vw;
 }
 
 #paralax{
