--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@
 html{
 	font-size: 100%;
 	box-sizing: border-box;
+	font-family: 'Sintony', sans-serif;
 }
 
 *{ box-sizing: inherit;}
@@ -50,8 +51,6 @@ body{
 	margin: 0.5rem;
 	padding: 5px;
 	border-radius: 50%;
-	text-align: center;
-	line-height: 0;
 	border: 2px solid rgba(255, 255, 255, 0.9);
 	background-color: rgba(0, 0, 0, 0.5);
 }
@@ -68,11 +67,40 @@ body{
 	border-radius: 1px;
 }
 
-#paralax{
+#parallax{
+	background: url(6959521-mountains-scenery.jpg) center center;
+	background-size: cover;
 	position: fixed;
 	height: 100vh;
 	width: 100vw;
-	background-color: red;
+	/*background-color: red;*/
+	z-index: -4;
+}
+#parallax-back-mid{
+	background: url(back-mid.png) center center;
+	background-size: cover;
+	position: fixed;
+	height: 100vh;
+	width: 100vw;
+	/*background-color: red;*/
+	z-index: -3;
+}
+#parallax-front-mid{
+	background: url(front-mid.png) center center;
+	background-size: cover;
+	position: fixed;
+	height: 100vh;
+	width: 100vw;
+	/*background-color: red;*/
+	z-index: -2;
+}
+#parallax-front{
+	background: url(front.png) center center;
+	background-size: cover;
+	position: fixed;
+	height: 100vh;
+	width: 100vw;
+	/*background-color: red;*/
 	z-index: -1;
 }
 
@@ -80,6 +108,43 @@ body{
 	overflow: hidden;
 	height: 100vh;
 	width: 100%;
+	text-align: center;
+	background-color: rgba(0, 0, 0, 0.2);
+}
+
+#home h1{
+	margin-top: 30vh;
+}
+
+#home h1 a{
+	color: #fff;
+	font-weight: normal;
+	text-decoration: none;
+}
+
+nav ul{
+	padding: 0;
+	margin: 0;
+	list-style: none;
+}
+
+nav li{
+	display: inline-block;
+}
+
+nav li a{
+	color: #fff;
+	text-decoration: none;
+	padding: 0.5rem;
+	border-right: 2px solid rgba(255, 255, 255, 0.9);
+	border-left: 2px solid rgba(255, 255, 255, 0.9);
+	border-radius: 0.5rem;
+	margin: 0 2px;
+}
+
+nav li a:hover{
+	border-bottom: 2px solid rgba(255, 255, 255, 0.9);
+	border-top: 2px solid rgba(255, 255, 255, 0.9);
 }
 
 #about{
