--- a/style.css
+++ b/style.css
@@ -163,3 +163,32 @@ nav li a:hover{
 	overflow: hidden;
 	min-height: 100vh;
 }
+
+
+.project-foreground{
+	width: 500px;
+	height: 300px;
+	background-color: red;
+	opacity: 1;
+	transition: opacity 1s;
+}
+.project:hover .project-foreground{
+	opacity: 0;
+}
+
+.project-background{
+	background: url(photo-1444065707204-12decac917e8.jpg) center center;
+	background-size: cover;
+	position: fixed;
+	top: 0;
+	height: 100vh;
+	width: 100vw;
+	/*background-color: red;*/
+	z-index: -1;
+	opacity: 0;
+	transition: opacity 1s;
+}
+
+.project:hover .project-background{
+	opacity: 1;
+}
