--- a/style.css
+++ b/style.css
@@ -16,222 +16,8 @@ html{
 
 body{
 	margin: 0;
-	background: #729f98;
+	background: #588c73;
 	color: #261c17;
-}
-
-/*#mobile-menu{
-	position: fixed;
-	top: 0;
-	right: 0;
-	margin: 0.5rem;
-	padding: 2.25vw;
-	width: 15vw;
-	height: 15vw;
-	border-radius: 50%;
-	text-align: center;
-	line-height: 0;
-	border: 0.5vw solid rgba(255, 255, 255, 0.9);
-	background-color: rgba(0, 0, 0, 0.5);
-}
-
-/*#mobile-menu span{
-	text-indent: 100%;
-	white-space: nowrap;
-	overflow: hidden;
-	display: block;
-	background-color: rgba(255, 255, 255, 0.9);
-	width: 6vw;
-	margin: 2vw auto;
-	height: 0.5vw;
-	border-radius: 0.25vw;
-}*/
-#mobile-menu{
-	position: fixed;
-	top: 0;
-	right: 0;
-	margin: 0.5rem;
-	padding: 5px;
-	border-radius: 50%;
-	border: 2px solid rgba(255, 255, 255, 0.9);
-	background-color: rgba(0, 0, 0, 0.5);
-
-	display: none;
-}
-
-#mobile-menu span{
-	text-indent: 100%;
-	white-space: nowrap;
-	overflow: hidden;
-	display: block;
-	background-color: rgba(255, 255, 255, 0.9);
-	width: 22px;
-	margin: 8px;
-	height: 2px;
-	border-radius: 1px;
-}
-
-#overlay{
-	color: #fff;
-	text-align: center;
-	padding-top: 40vh;
-	font-size: 300%;
-	position: fixed;
-	z-index: 3;
-	width: 100vw;
-	height: 100vh;
-	background-color: #729f98;
-}
-.loader,
-.loader:before,
-.loader:after {
-  background: #ffffff;
-  -webkit-animation: load1 1s infinite ease-in-out;
-  animation: load1 1s infinite ease-in-out;
-  width: 1em;
-  height: 4em;
-}
-.loader:before,
-.loader:after {
-  position: absolute;
-  top: 0;
-  content: '';
-}
-.loader:before {
-  left: -1.5em;
-  -webkit-animation-delay: -0.32s;
-  animation-delay: -0.32s;
-}
-.loader {
-  color: #ffffff;
-  text-indent: -9999em;
-  margin: 88px auto;
-  position: relative;
-  font-size: 11px;
-  -webkit-transform: translateZ(0);
-  -ms-transform: translateZ(0);
-  transform: translateZ(0);
-  -webkit-animation-delay: -0.16s;
-  animation-delay: -0.16s;
-}
-.loader:after {
-  left: 1.5em;
-}
-@-webkit-keyframes load1 {
-  0%,
-  80%,
-  100% {
-    box-shadow: 0 0;
-    height: 4em;
-  }
-  40% {
-    box-shadow: 0 -2em;
-    height: 5em;
-  }
-}
-@keyframes load1 {
-  0%,
-  80%,
-  100% {
-    box-shadow: 0 0;
-    height: 4em;
-  }
-  40% {
-    box-shadow: 0 -2em;
-    height: 5em;
-  }
-}
-
-#scene{
-	position: fixed;
-	top: -3vh;
-	left: -3vw;
-}
-.parallax{
-	background-size: cover;
-	background-position: top left;
-	background-repeat: no-repeat;
-	height: 106vh;
-	width: 106vw;
-
-}
-
-#parallax{
-	background-image: url(back.png);
-	z-index: -5;
-}
-#parallax-back-mid{
-	background-image: url(back-mid.png);
-	z-index: -4;
-}
-#parallax-front-mid{
-	background-image: url(front-mid.png);
-	z-index: -3;
-}
-#parallax-front{
-	background-image: url(front.png);
-	z-index: -2;
-}
-
-#shade{
-	position: fixed;
-	height: 100vh;
-	width: 100vw;
-	z-index: -1;
-	background-color: rgba(0, 0, 0, 0.1);
-}
-
-
-#home{
-	position: relative;
-	z-index: 1;
-	color: #fff;
-	overflow: hidden;
-	height: 100vh;
-	width: 100%;
-	text-align: center;
-}
-
-#home h1{
-	font-weight: normal;
-}
-
-nav{
-	z-index: 2;
-	position: fixed;
-	top: 0;
-	right: 0;
-	margin: 1rem 0.5rem;
-	transition: opacity 1s;
-}
-.left-nav{
-	position: fixed;
-	left: 0.5rem;
-}
-
-nav ul{
-	padding: 0;
-	margin: 0;
-	list-style: none;
-}
-
-nav li{
-	display: inline-block;
-}
-
-nav li a{
-	color: #fff;
-	text-decoration: none;
-	padding: 0.5rem;
-	border-right: 2px solid rgba(255, 255, 255, 0.9);
-	border-left: 2px solid rgba(255, 255, 255, 0.9);
-	border-radius: 0.5rem;
-	margin: 0 2px;
-}
-
-nav li a:hover{
-	border-bottom: 2px solid rgba(255, 255, 255, 0.9);
-	border-top: 2px solid rgba(255, 255, 255, 0.9);
 }
 
 .vp-box{
@@ -239,94 +25,117 @@ nav li a:hover{
 	align-items: center;
 	justify-content: center;
 	min-height: 100vh;
+	overflow: hidden;
+	position: relative;
 }
 
-.wrap{
-	width: 66rem;
-	padding: 3rem;
-	border-radius: 2rem;
-	margin: 0 auto;
-	background-color: #ede9ce;
+.vp-box h2{
+	font-weight: normal;
+	font-family: 'Slabo 27px', serif;
+}
+
+.vp-box div{
+
+	height: 50%;
+}
+
+
+
+#top-nav{
+	position: fixed;
+	top: 0;
+	right: 0;
+	z-index: 1;
+
+	border: 2px solid #f4f1e1;
+	color: #f4f1e1;
+	background-color: #261c17;
+
 	overflow: hidden;
-	box-shadow: 0 0 2rem #615743;
-	transition: opacity 1s;
+	width: 52px;
+	height: 52px;
+	border-radius: 26px;
+	margin: 0.5rem;
+	opacity: 0.75;
+	transition: width 0.5s ease, height 0.5s ease, opacity 0.5s ease;
+}
+#top-nav h2{
+	margin: 0;
+	font-weight: normal;
+}
+#mobile-menu{
+	position: absolute;
+	top: 0;
+	right: 0;
+	padding: 5px;
+}
+
+#mobile-menu span{
+	display: block;
+	background-color: #f4f1e1;
+	width: 22px;
+	margin: 8px;
+	height: 2px;
+	border-radius: 1px;
+	transition: transform 0.5s ease, opacity 0.5s ease;
+}
+#top-nav.open{
+	width: calc(100vw - 1rem);
+	opacity: 1;
+}
+
+#mobile-menu{
+	position: absolute;
+	top: 0;
+	right: 0;
+	padding: 5px;
+}
+
+#top-nav.open .span-top{
+	transform: translateY(10px) rotate(-45deg);
+}
+#top-nav.open .span-middle{
+	opacity: 0;
+}
+#top-nav.open .span-bottom{
+	transform: translateY(-10px) rotate(45deg);
+}
+
+
+#nav-wrap{
+	width: 90vw;
+	width: calc(100vw - 1rem - 4px);
+	position: absolute;
+	right: 0;
+	padding: 2rem;
+	overflow: hidden;
+}
+
+
+#top-nav.home a{
+	color: #f4f1e1;
+}
+
+#home{
+	color: #f4f1e1;
+}
+#home h1{
+	font-weight: normal;
+	font-family: 'Slabo 27px', serif;
+}
+#home p{
 }
 
 #about{
-	position: relative;
-	z-index: 1;
-	overflow: hidden;
-}
-.about-wrap img{
-	width: 40%;
-	border-radius: 50%;
-	float: right;
-}
-.about-wrap h2, .about-wrap p{
-	float: left;
-	width: 60%
+	background-color: #ede9ce;
 }
 
-#portfolio{
-	position: relative;
-	z-index: 1;
-	overflow: hidden;
-}
-.port-wrap h2{
-	margin-top: 0;
-}
-
-#portfolio a{
-	display: inline-block;
-	width: 33%;
-	padding: 1rem;
-	background-color: red;
-}
-
-
-
-/*.project-foreground{
-	width: 500px;
-	height: 300px;
-	background-color: red;
-	opacity: 1;
-	transition: opacity 1s;
-}
-.project:hover .project-foreground{
-	opacity: 0;
-}*/
-
-.portpic{
-	position: fixed;
-	background-size: cover;
-	background-position: top center;
-	width: 100vw;
-	height: 100vh;
-	opacity: 0;
-	transition: opacity 1s;
-}
-.pp-show{
-	opacity: 1;
-}
-.pp-hide{
-	opacity: 0;
-}
-#pp-one{
-	background-image: url(beatschool.png);
-}
-#pp-two{
-}
-#pp-three{
-}
-#pp-four{
-}
-#pp-five{
-}
-#pp-six{
+#projects{
+	background-color: #d96459;
+	color: #f4f1e1;
 }
 
 #contact{
-	position: relative;
-	z-index: 1;
-	overflow: hidden;
+	background-color: #ede9ce;
 }
+
