--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ html{
 	font-size: 100%;
 	box-sizing: border-box;
 	font-family: 'Sintony', sans-serif;
+	-webkit-text-size-adjust:none;
 }
 
 *{ box-sizing: inherit;}
