--- a/style.css
+++ b/style.css
@@ -161,8 +161,7 @@ body{
     width: 100%
 }
 .img-wrap{
-    width: 75%;
-    margin: 0 auto;
+    margin: 1.5rem 20%;
 	position: relative;
     border-radius: 0.5rem;
     overflow: hidden;
@@ -175,6 +174,9 @@ body{
     left: 0;
     width: 100%;
     height: 100%;
+}
+#about p{
+	margin: 1rem;
 }
 
 #projects{
