--- a/style.css
+++ b/style.css
@@ -65,11 +65,18 @@ body{
 	display: inline-block;
 	margin: 0.5rem 0;
 }
+#top-nav li a:hover, #top-nav li a:focus, #top-nav li a:active{
+	text-decoration: underline;
+	outline: 0;
+}
 #mobile-menu{
 	position: absolute;
 	top: 0;
 	right: 0;
 	padding: 5px;
+}
+#mobile-menu:focus{
+	outline: 0;
 }
 
 #mobile-menu span{
@@ -143,6 +150,7 @@ body{
 	width: 100%;
 	margin: 1rem;
 	max-width: 70rem;
+	position: relative;
 }
 
 @media all and (min-width: 35em){
@@ -193,6 +201,18 @@ body{
 	.vp-box h2{
 		font-size: 2.4em;
 	}
+}
+
+#canvas-home, #canvas-hidden{
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+}
+
+#canvas-hidden{
+	visibility: hidden;
 }
 
 
@@ -278,6 +298,7 @@ body{
 	border: 2px solid #ede9ce;
 	width: 100%;
 	display: block;
+	z-index: 1;
 }
 
 .project-background{
@@ -286,6 +307,15 @@ body{
 	background-size: cover;
 	width: 100%;
 	padding-top: 56.25%;
+	transition: transform 0.75s ease, transform-origin 0.2s ease-out;
+}
+
+.project-overlay{
+	position: absolute;
+	top: 0;
+	left: 0;
+	bottom: 0;
+	right: 0;
 	box-shadow: 0.25rem 0.25rem  0.5rem #261c17 inset;
 }
 
@@ -298,6 +328,8 @@ body{
 	color: #f4f1e1;
 	padding: 0.25rem;
 	text-align: center;
+	transform-origin: bottom center;
+	transition: transform 0.75s ease;
 }
 
 .projects-container{
@@ -330,6 +362,18 @@ body{
 	}
 }
 
+.project:focus{
+	outline: 0;
+}
+
+.project:hover .project-background, .project:focus .project-background,
+.project:active .project-background{
+	transform: scale(1.2);
+}
+
+.project:hover span, .project:focus span, .project:active span{
+	transform: rotateX(90deg);
+}
 
 #contact{
 	background-color: #ede9ce;
@@ -375,11 +419,22 @@ body{
 	background-color: #588c73;
 	color: #f4f1e1;
 	box-shadow: 0.125rem 0.125rem  0.25rem #261c17;
+	transition: background-color 0.5s ease;
+}
+#contact-form button:hover, #contact-form button:focus,
+#contact-form button:active{
+	outline: 0;
+	cursor: pointer;
+	background-color: #3d6250;
 }
 #contact a{
 	color: #588c73;
 	text-decoration: none;
 	font-weight: bold;
+}
+#contact a:hover, #contact a:focus, #contact a:active{
+	text-decoration: underline;
+	outline: 0;
 }
 
 #contact p{
