--- a/wa-resources/wa_resources.css
+++ b/wa-resources/wa_resources.css
@@ -6,14 +6,27 @@
 	border-radius: 6px;
 	/*font-size: 100%;*/
 	width: 100%;
+	min-width: 285px;
 	max-width: 960px;
 	background-color: #6c8089;
 	overflow: hidden;
+	margin: 0 auto;
 
 	min-height: 100vh;
 }
 
-@media all and (min-width: 1000px){
+@media all and (min-width: 960px){
+	.app-container{
+		margin: 48px auto;
+		margin: 0 auto;
+	}
+}
+@media all and (min-width: 960px) and (min-height: 636px){
+	.app-container{
+		min-height: auto;
+	}
+}
+@media all and (min-width: 960px) and (min-height: 684px){
 	.app-container{
 		margin: 48px auto;
 	}
@@ -210,6 +223,7 @@
 
 
 /*        SETTINGS       */
+
 .app-settings{
 	background-color: #6c8089;
 	position: absolute;
