--- a/wa-resources/style.css
+++ b/wa-resources/style.css
@@ -54,7 +54,7 @@ body{
 }
 
 
-@media all and (min-width: 555px){
+@media all and (min-width: 560px){
 	#monitor{
 		width: 80%;
 	}
@@ -76,7 +76,7 @@ body{
 
 
 
-@media all and (min-width: 555px) and (min-height: 636px){
+@media all and (min-width: 560px) and (min-height: 636px){
 	#bottom-controls{
 		float: none;
 		position: static;
@@ -183,7 +183,7 @@ body{
 	margin-bottom: 0;
 }
 
-@media all and (min-width: 555px){
+@media all and (min-width: 560px){
 
 	#eq-check-answer, #eq-reset-game{
 
@@ -192,7 +192,7 @@ body{
 	}
 }
 
-@media all and (min-width: 555px) and (min-height: 500px), 
+@media all and (min-width: 560px) and (min-height: 500px), 
 all and (min-width: 960px) and (min-height: 500px){
 
 	#filter-type{
@@ -224,7 +224,7 @@ all and (min-width: 960px) and (min-height: 500px){
 }
 
 
-@media all and (min-width: 555px) and (min-height: 636px){
+@media all and (min-width: 560px) and (min-height: 636px){
 	#eq-check-answer, #eq-reset-game{
 
 		margin: 18px 9px;
@@ -273,6 +273,11 @@ all and (min-width: 960px) and (min-height: 500px){
 	margin-right: auto;
 	padding: 15%;
 	text-align: center;
+
+	height: auto;
+	font-size: 16px;
+	width: 100%;
+	padding: 32px;
 }
 
 #track0-drag-drop.error{
@@ -296,4 +301,106 @@ all and (min-width: 960px) and (min-height: 500px){
 }
 #track0-load-custom-audio.active:hover{
 	cursor: pointer;
+}
+
+
+.menu-item span{
+	width: 0;
+	height: 0;
+	overflow: hidden;
+	display: inline-block;
+}
+
+#menu-parameters:after{
+	content: '\f1de';
+	font-family: FontAwesome;
+}
+#menu-audio:after{
+	content: '\f001';
+	font-family: FontAwesome;
+}
+#menu-about:after{
+	content: '\f05a';
+	font-family: FontAwesome;
+}
+
+#settings-controls-right{
+	width: auto;
+}
+
+@media all and (min-width: 420px){
+	.menu-item span{
+		width: auto;
+		height: auto;
+		overflow: visible;
+		display: inline;
+	}
+
+	#menu-parameters:after{
+		display: none;
+	}
+	#menu-audio:after{
+		display: none;
+	}
+	#menu-about:after{
+		display: none;
+	}
+
+}
+
+
+#eq-presets, #track0-audio-files{
+	width: 100%;
+}
+#eq-load-preset, #track0-load-included-audio,
+#track0-load-custom-audio{
+	margin-top: 12px;
+	width: 100%;
+}
+#settings-save{
+	width: 100%;
+}
+
+@media all and (min-width: 600px){
+	#eq-presets, #track0-audio-files{
+		width: auto;
+		min-width: 154px;
+	}
+	#eq-load-preset, #track0-load-included-audio{
+		margin-top: 0;
+		width: auto;
+		min-width: 154px;
+		margin-left: 12px;
+	}
+	#settings-save{
+		width: auto;
+		min-width: 154px;
+		display: block;
+		margin: 0 auto;
+	}
+
+	#track0-load-custom-audio{
+		width: auto;
+		min-width: 154px;
+		display: block;
+		margin: 18px auto;
+	}
+
+	#track0-drag-drop{
+		padding: 48px;
+	}
+}
+
+@media all and (min-width: 800px){
+	#settings-save, #track0-load-custom-audio{
+		margin: 18px auto 0 auto;
+	}
+
+
+	#track0-drag-drop{
+		width: 80%;
+		height: 190px;
+		padding: 13% 15%;
+		font-size: 24px;
+	}
 }
