--- a/local-weather/style.css
+++ b/local-weather/style.css
@@ -18,5 +18,14 @@ html{
 
 body{
 	margin: 0;
+	font-family: sans-serif;
+}
+
+#wrapper, #err-wrapper{
+	display: none;
+	opacity: 0;
+	transition: opacity 1s ease;
+	margin: 0 auto;
+	text-align: center;
 }
 
