--- a/tic-tac-toe/style.css
+++ b/tic-tac-toe/style.css
@@ -21,5 +21,173 @@ body{
 	font-family: sans-serif;
 }
 
+#wrapper{
+	max-width: 500px;
+	background-color: hsla(303, 62%, 7%, 1);
+	overflow: hidden;
+	padding: 3rem;
+}
 
+#board{
+	position: relative;
+	overflow: hidden;
+	cursor: pointer;
+}
+
+#board.game-over .x:before, #board.game-over .x:after{
+	background-color: hsla(303, 10%, 50%, 1);
+}
+#board.game-over .o:before{
+	border-color: hsla(303, 10%, 50%, 1);
+}
+
+.square{
+	position: relative;
+	background-color: hsla(303, 62%, 7%, 1);
+	width: 33.33%;
+	padding-bottom: calc(33.33% - 4px);
+	border: 2px solid hsla(303, 62%, 80%, 1);
+	float: left;
+	transition: background-color 1s ease, box-shadow 0.3s ease;
+}
+#board .square.has-x:hover, #board.user-can-play .square.has-o:hover{
+	box-shadow: none !important;
+}
+#board .square.winning-square{
+	background-color: hsla(48, 100%, 50%, 1);
+}
+#board .square.winning-square .x:before, #board .square.winning-square .x:after{
+	background-color: hsla(34, 100%, 55%, 1);
+}
+#board .square.winning-square .o:before{
+	border-color: hsla(34, 100%, 55%, 1);
+}
+
+#square-0, #square-1, #square-2{
+	border-top-color: hsla(303, 62%, 7%, 1);
+}
+#square-2, #square-5, #square-8{
+	border-right-color: hsla(303, 62%, 7%, 1);
+}
+#square-0, #square-3, #square-6{
+	border-left-color: hsla(303, 62%, 7%, 1);
+}
+#square-6, #square-7, #square-8{
+	border-bottom-color: hsla(303, 62%, 7%, 1);
+}
+
+#board.player-is-x .square:hover{
+	box-shadow: 0 0 100px -15px hsla(331, 100%, 47%, 1) inset;
+}
+#board.player-is-o .square:hover{
+	box-shadow: 0 0 100px -15px hsla(180, 100%, 47%, 1) inset;
+}
+
+.x, .o{
+	position: absolute;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	opacity: 0;
+	transition: opacity 1s ease;
+}
+
+
+.has-o .o{opacity: 1;}
+
+.has-x .x{opacity: 1;}
+
+.x:before{
+	content: "";
+	display: block;
+	width: calc(141.4% - 45px);
+	height: 4px;
+	background-color: hsla(331, 100%, 47%, 1);
+	position: absolute; 
+	top: 14px;
+	left: 16px;
+	border-radius: 2px;
+	transform-origin: 0% 50%;
+	transform: rotate(45deg);
+	transition: background-color 1s ease;
+}
+.x:after{
+	content: "";
+	display: block;
+	width: calc(141.4% - 45px);
+	height: 4px;
+	background-color: hsla(331, 100%, 47%, 1);
+	position: absolute; 
+	bottom: 14px;
+	left: 16px;
+	border-radius: 2px;
+	transform-origin: 0% 50%;
+	transform: rotate(-45deg);
+	transition: background-color 1s ease;
+}
+
+.o:before{
+	content: "";
+	display: block;
+	border: 4px solid hsla(180, 100%, 47%, 1);
+	position: absolute; 
+	top: 14px;
+	left: 14px;
+	bottom: 14px;
+	right: 14px;
+	border-radius: 50%;
+	transition: border 1s ease;
+}
+
+
+h1, h2{
+	text-align: center;
+	color: hsla(303, 62%, 96%, 1);
+}
+
+#choose-token, #game-end-screen{
+	position: absolute;
+	top: 0;
+	left: 0;
+	bottom: 0;
+	right: 0;
+	background-color: hsla(303, 62%, 7%, 1);
+	text-align: center;
+	transition: opacity 0.5s linear;
+}
+
+.hidden{
+	opacity: 0;
+}
+
+#game-end-screen{
+	display: none;
+}
+
+#choose-x, #choose-o{
+	float: none;
+	display: inline-block;
+	margin: 16px;
+	border-color: hsla(303, 62%, 7%, 1);
+}
+
+#choose-x .x:after, #choose-x .x:before{
+	background-color: hsla(303, 62%, 96%, 1);
+}
+
+#choose-o .o:before{
+	border-color: hsla(303, 62%, 96%, 1);
+}
+#choose-x:hover .x:after, #choose-x:hover .x:before{
+	background-color: hsla(331, 100%, 47%, 1);
+}
+
+#choose-o:hover .o:before{
+	border-color: hsla(180, 100%, 47%, 1);
+}
+
+#play-again{
+	cursor: pointer;
+}
 
