tic tac toe added to portfolio

--- a/style.css
+++ b/style.css
@@ -399,6 +399,9 @@ body{
 #pa-beatschool .project-background{
 	background-image: url('beatschool.jpg');
 }
+#pa-tic-tac-toe .project-background{
+	background-image: url('tic-tac-toe.jpg');
+}
 
 
 
